# evernote

./: .flake8  .gitignore  enex_parser.py  enex_schema.json  enex_schema.xsd  extract_enex_schema.py  main.py  pdf_pipeline.py  process_drive_folder_pdfs.ipynb  pyproject.toml
.omc/: project-memory.json
.omc/sessions/: 25fda995-b304-4889-96df-180af1274129.json  2a8d24d4-3f6e-4dbf-b972-3cd4cda4a1e3.json  432d366e-3861-4268-a6b4-3906cf193aa0.json  6b7ace01-7192-4c58-89ac-07955356f8fa.json  82177ac1-ceb3-4ae4-92db-9523c777cd3f.json  f8c55c81-58e8-426b-bc8a-72b812fa1d9f.json
.omc/state/: agent-replay-2a8d24d4-3f6e-4dbf-b972-3cd4cda4a1e3.jsonl  agent-replay-a8dcd519-6a07-4bd7-8f66-769529c47018.jsonl  hud-state.json  setup-state.json  subagent-tracking.json
output_sample5/: document_manifest.json
output_sample5/markdown/: 04102025_Preferred Bank Loan Interest Changes Each Month_003.md
output_sample5/nlp/: 04102025_Preferred Bank Loan Interest Changes Each Month_003_nlp.json  04102025_Preferred Bank Loan Interest Changes Each Month_nlp.json
output_sample5_nlp/: document_manifest.json
output_sample5_nlp/markdown/: 04102025_Preferred Bank Loan Interest Changes Each Month.md  04102025_Preferred Bank Loan Interest Changes Each Month_002.md  2024_01_26_09_24_04.md  (+1 more)
output_sample5_tuned_defaults/: document_manifest.json
output_sample5_tuned_logging/: document_manifest.json
pipeline/: __init__.py  __main__.py  chunking.py  cli.py  conversion.py  models.py  nlp.py  sources.py  utils.py  vectorstores.py
tests/: conftest.py  test_pipeline.py  test_state_resume.py
(+3 files in other folders)
